--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,8 @@
 .searchButton {
   color: white;
   position: absolute;
-  right: 8px;
+  right: 10px;
+  top: 10px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
