--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -22,6 +22,12 @@
     <!-- MDB -->
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
+
+    <!-- jQuery UI -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
   </head>
   <body>
 
@@ -34,7 +40,7 @@
                     <div class="searchBox">
                         <form method="POST" action="{% url 'get_weather' %}">
                             {% csrf_token %}
-                            <input class="searchInput" type="text" name="city_name" placeholder="Type city....">
+                            <input id="city_input" class="searchInput" type="text" name="city_name" placeholder="Type city....">
                             <button class="searchButton" type="submit">
                                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
                                     <path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path>
@@ -72,8 +78,17 @@
             </div>
         </div>
     </section>
+    <script>
+    $(function() {
+    $("#city_input").autocomplete({
+        source: "{% url 'city_autocomplete' %}",
+        minLength: 1,
+    });
+    });
+    </script>
+
     <script type="text/javascript" src="{% static 'js/mdb.umd.min.js' %}"></script>
 
-    <script type="text/javascript"></script>
+    
   </body>
 </html>
